fix: Fix button vertical alignment (#231)

--- a/src/components/MaButton/MaButton.scss
+++ b/src/components/MaButton/MaButton.scss
@@ -3,6 +3,7 @@
 .ma-button {
   @include font-weight(semibold);
   display: flex;
+  align-items: center;
   justify-content: center;
   transition: background-color 0.3s, background-position 0.3s, border-color 0.3s;
   border: 1px solid transparent;
